# cd-egomotion

cpp/ffmpeg_mv/: CMakeLists.txt
cpp/ffmpeg_mv/include/: decode_frame.hpp  extract_mv.hpp  ffmpeg_reader.hpp  mv_structs.hpp
cpp/ffmpeg_mv/src/: bindings.cpp  decode_frame.cpp  extract_mv.cpp  ffmpeg_reader.cpp  main.cpp
tests/: extract_mv.py
